[tool.poetry]
name = "scraping-netkeiba"
version = "0.1.0"
description = "Extract horse racing data from https://www.netkeiba.com/"
authors = ["Kazumasa Hirata"]
license = "MIT"
readme = "README.md"
packages = [{ include = "scraping_netkeiba" }]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.2"
python = "^3.11"
requests = "^2.31.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.3.1"
pytest-env = "^0.8.1"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
